Fix navbar text color on mobile

--- a/assets/scss/partials/_navbar.scss
+++ b/assets/scss/partials/_navbar.scss
@@ -102,6 +102,10 @@
     .navbar-custom {
         background-color: #000;
 
+        a {
+            color: #fff !important;
+        }
+
         .navbar-brand img {
             display: block !important;
             margin-top: -16px;
